[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = rh-chart-repo-manager
version = 0.1.0
author = Baiju Muthukadan
author_email = baiju.m.mail@gmail.com
description = Chart Repo Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openshift-helm-charts/repo
project_urls =
    Bug Tracker = https://github.com/openshift-helm-charts/repo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    PyYAML
    requests
    semver
    pytest
    pytest-bdd

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chart-repo-manager = chartrepomanager.chartrepomanager:main
    chart-pr-review = chartprreview.chartprreview:main
    sanity-check-pr = sanitycheckpr.sanitycheckpr:main
    pr-artifact = prartifact.prartifact:main
    sa-for-chart-testing = saforcharttesting.saforcharttesting:main
    check-auto-merge = checkautomerge.checkautomerge:main
    check-pr-for-ci = workflowtesting.checkprforci:main
    release-checker = release.releasechecker:main
    releaser = release.releaser:main
    check-user = owners.checkuser:main

