[metadata]
name = rh-chart-repo-manager
version = 0.1.0
author = Baiju Muthukadan
author_email = baiju.m.mail@gmail.com
description = Chart Repo Manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openshift-helm-charts/repo
project_urls =
    Bug Tracker = https://github.com/openshift-helm-charts/repo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    PyYAML
    requests
    semver
    pytest
    pytest-bdd

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chart-repo-manager = chartrepomanager.chartrepomanager:main
    chart-pr-review = chartprreview.chartprreview:main
    check-pr-content = checkprcontent.checkpr:main
    pr-artifact = pullrequest.prartifact:main
    pr-comment = pullrequest.prepare_pr_comment:main
    sa-for-chart-testing = saforcharttesting.saforcharttesting:main
    check-auto-merge = checkautomerge.checkautomerge:main
    check-pr-for-ci = workflowtesting.checkprforci:main
    release-checker = release.releasechecker:main
    releaser = release.releaser:main
    check-user = owners.checkuser:main
    metrics = metrics.metrics:main
    get-verify-params = report.get_verify_params:main
    pushowners=metrics.pushowners:main
    update-index=updateindex.updateindex:main
    user-is-repo-owner=owners.user_is_repo_owner:main
    generate-chart-locks=packagemapping.generatelocks:main
    extract-metadata-from-pr=pullrequest.metadata:main
    assert-redhat-owners-file-meta=owners.redhat_metadata:main
